--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
